syntax = "proto3";

package api.addresses.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

option go_package = "addresses/api/addresses/v1;v1";
option java_multiple_files = true;
option java_package = "api.addresses.v1";

service AddressesService {
	rpc CreateAddresses (Address) returns (Address) {
		option (google.api.http) = {
			post: "/v1/addresses",
			body: "*"
		};
	};
	rpc UpdateAddresses (Address) returns (Address) {
		option (google.api.http) = {
			patch: "/v1/addresses",
			body: "*"
		};
	};
	rpc DeleteAddresses (DeleteAddressesRequest) returns (DeleteAddressesReply) {
		option (google.api.http) = {
			delete: "/v1/addresses"
		};
	};
	rpc GetAddresses (GetAddressesRequest) returns (GetAddressesReply) {
		option (google.api.http) = {
			get: "/v1/addresses"
		};
	};
}

message Address {
	uint32 id = 1;
	string owner = 2 [(google.api.field_behavior) = REQUIRED];
	string name = 3 [(google.api.field_behavior) = REQUIRED];
	string city = 4 [(google.api.field_behavior) = REQUIRED];
	string state = 5 [(google.api.field_behavior) = REQUIRED];
	string country = 6 [(google.api.field_behavior) = REQUIRED];
	string zip_code = 7 [
		(google.api.field_behavior) = REQUIRED,
		json_name = "zip_code"
	];
	string street_address = 8 [
		(google.api.field_behavior) = REQUIRED,
		json_name = "street_address"
	];
}

message UpdateAddressesRequest {
	Address addresses = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteAddressesRequest {
	int32 addresses_id = 1 [
		(google.api.field_behavior) = REQUIRED,
		json_name = "addresses_id"
	];
	string name = 2 [(google.api.field_behavior) = REQUIRED];
	string owner = 3 [(google.api.field_behavior) = REQUIRED];
}

message GetAddressesRequest {
	string name = 1 [(google.api.field_behavior) = REQUIRED];
	string owner = 2 [(google.api.field_behavior) = REQUIRED];
}

message AddressReply {
	uint32 id = 1 [(google.api.field_behavior) = REQUIRED];
	Address address = 2 [(google.api.field_behavior) = REQUIRED];
}

message GetAddressesReply {
	repeated Address addresses = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteAddressesReply {
	string message = 1 [(google.api.field_behavior) = REQUIRED];
	uint32 id = 2 [(google.api.field_behavior) = REQUIRED];
	uint32 code = 3 [(google.api.field_behavior) = REQUIRED];
}
